lintian (2.5.0~rc2) UNRELEASED; urgency=low

  * checks/binaries:
    + [ADB] Update binary-from-other-architecture's tests in line with the
      changes to filename output introduced in 2.5.0~rc1.
      (Closes: #614906)
  * checks/changes-file.desc:
    + [NT] Added oneiric as valid Ubuntu distribution.  Thanks to Benjamin
      Drung for the patch.  (Closes: #617227)
  * checks/deb-format:
    + [NT] Removed assumption that there was always a changelog in a binary
      with a data.tar.lzma member.
  * checks/huge-usr-share:
    + [NT] Removed assumption that there is always files in usr/share.

  * data/changelog-file/ubuntu-dists:
    + [NT] Added oneiric as valid Ubuntu distribution.  Thanks to Benjamin
      Drung for the patch.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Fri, 25 Feb 2011 17:48:59 +0000

lintian (2.5.0~rc1) experimental; urgency=low

  The "welcome Niels Thykier!" release.

  * Summary of tag changes:
    + Added:
      - build-depends-on-specific-java-doc-package
      - depends-on-specific-java-doc-package
      - unneeded-build-dep-on-quilt
      - description-synopsis-starts-with-article
      - needless-dependency-on-jre
      - temporary-debhelper-file
      - compressed-objects.inv
      - unused-build-dependency-on-cdbs
      - python-debug-in-wrong-location
      - debian-watch-contains-dh_make-template
      - missing-dependency-on-python-central
      - python-module-in-wrong-location
      - missing-dependency-on-python-support
      - package-installs-python-bytecode
      - debhelper-maintscript-needs-versioned-build-depends
    + Removed:
      - embedded-zlib (now in embedded-library)
      - embedded-libpng (now in embedded-library)
      - embedded-libjpeg (now in embedded-library)
      - embedded-libopenjpeg (now in embedded-library)
      - package-installs-python-pyc (replaced by
        package-installs-python-bytecode)

  * checks/*:
    + [NT] Use the new pre-sorted file {index,info} when iterating over