@@ -1,0 +1,31 @@
+Source: {$srcpkg}
+Priority: extra
+Section: devel
+Maintainer: {$author}
+Standards-Version: {$standards_version}
+Build-Depends: debhelper (>= 7.0.50~)
+
+Package: {$srcpkg}-some
+Architecture: any
+Depends: $\{misc:Depends\}, $\{shlibs:Depends\}
+Multi-Arch: bad
+Description: {$description}
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+ .
+ This is a test with an invalid Multi-Arch field.
+
+Package: {$srcpkg}-same
+Architecture: any
+Depends: $\{misc:Depends\}, $\{shlibs:Depends\}
+Multi-Arch: same
+Description: {$description} - same
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+ .
+ This is a test with a valid Multi-Arch field.
+
