@@ -1,0 +1,5 @@
+Testname: fields-multi-arch
+Sequence: 6000
+Version: 1.0
+Description: Tests for the Multi-Arch field
+Test-For: unknown-multi-arch-value
