@@ -1,5 +1,9 @@
 lintian (2.5.0~rc2) UNRELEASED; urgency=low
 
+  * Summary of tag changes:
+    + Added:
+      - unknown-multi-arch-value
+
   * checks/binaries:
     + [ADB] Update binary-from-other-architecture's tests in line with the
       changes to filename output introduced in 2.5.0~rc1.
@@ -10,7 +14,9 @@ lintian (2.5.0~rc2) UNRELEASED; urgency=low
   * checks/deb-format:
     + [NT] Removed assumption that there was always a changelog in a binary
       with a data.tar.lzma member.
-  * checks/huge-usr-share:
+  * checks/fields:
+    + [NT] Recognise Multi-Arch as a known binary field.  (Closes: #617816)
+    * checks/huge-usr-share:
     + [NT] Removed assumption that there is always files in usr/share.
 
   * data/changelog-file/ubuntu-dists:
